# JAX-MD

./: .gitignore  LICENSE  README.MD  pyproject.toml
example/data/input_file/: input.yaml
example/data/xyz/: system.xyz
src/: dynamics.py  parser.py
src/jax_md/: __init__.py  dynamics.py  parser.py  parser_md.py  visual.py  writer.py
test/: test_dynamics.py
