[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-md"
authors = [
   {name = "Côme Cattin", email = "cattin.come@gmail.com"}
]
description = "Molecular dynamics using JAX."
readme = "README.MD"
version = "1.0.0"
dependencies = [
   "numpy",
   "matplotlib",
   "jax",
   "jaxlib",
   "pyyaml",
   "pytest",
]
license = {file = "LICENSE"}
keywords = ["md", "molecular dynamics", "jax", "MD simulation"]
classifiers = [

  "Development Status :: 3 - Alpha",

  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Chemistry",

  "Natural Language :: English",

  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/comecattin/JAX-MD"
Issues = "https://github.com/comecattin/JAX-MD/issues"

[project.scripts]
jaxdyn = "jax_md.dynamics:main"
